[package]
authors = ["florian.leon <florian.leon@sii.fr>"]
name = "datafusion_imu"
description = "Performs datafusion for 6 or 9 DOF sensors"
version = "0.2.0"
edition = "2021"
license = "0BSD"
readme = "README.md"
exclude = ["/.cargo", "/.vscode", "*.code-workspace"]
keywords = ["no-std", "datafusion", "IMU", "Kalman", "sensor-fusion"]
categories = ["no-std"]
repository = "https://github.com/SII-Public-Research/Datafusion"

[dependencies]

[dependencies.nalgebra]
version = "0.33.0"
default-features = false

[dependencies.micromath]
version = "2.0.0"

[dev-dependencies.rppal]
version = "0.18.0"
features = ["hal"]

[dev-dependencies.embedded-hal]
version = "1.0.0"

[dev-dependencies.adafruit_nxp]
version = "0.1.2"

[features]
default = ["alloc"]
alloc = []